--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,4 +7,9 @@
     <string name="description_post_like">Нравится</string>
     <string name="description_post_share">Поделиться</string>
     <string name="description_post_view">Просмотры</string>
+    <string name="description_post_save">Сохранить</string>
+    <string name="menu_edit">Изменить</string>
+    <string name="menu_remove">Удалить</string>
+    <string name="post_text">Текст поста</string>
+    <string name="error_empty_content">Контент не может быть пустым</string>
 </resources>
