--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -12,4 +12,7 @@
     <string name="menu_remove">Удалить</string>
     <string name="post_text">Текст поста</string>
     <string name="error_empty_content">Контент не может быть пустым</string>
+    <string name="edit_cancel">Отмена</string>
+    <string name="pencil">Карандаш</string>
+    <string name="edit_message">Редактирование</string>
 </resources>
