--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="post_text">Post Text</string>
     <string name="menu_edit">Edit</string>
     <string name="error_empty_content">Content can\'t be empty</string>
+    <string name="edit_cancel">Cancel</string>
+    <string name="pencil">Pencil</string>
+    <string name="edit_message">Edit Message</string>
 </resources>
