Prepare for HW09 Navigation

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -14,5 +14,6 @@
     <string name="error_empty_content">Контент не может быть пустым</string>
     <string name="edit_cancel">Отмена</string>
     <string name="pencil">Карандаш</string>
+    <string name="chooser_share_post">Поделиться</string>
     <string name="edit_message">Редактирование</string>
 </resources>
