--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="error_empty_content">Content can\'t be empty</string>
     <string name="edit_cancel">Cancel</string>
     <string name="pencil">Pencil</string>
+    <string name="chooser_share_post">Share post</string>
     <string name="edit_message">Edit Message</string>
 </resources>
